# agentassay

./: .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: index.md
docs/architecture/: overview.md
docs/concepts/: coverage.md  mutation-testing.md  stochastic-testing.md  token-efficient-testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ci-cd-integration.md  dashboard.md  framework-adapters.md  pytest-plugin.md
docs/operations/: troubleshooting.md
docs/plans/: 2026-03-01-market-extension-design.md
docs/reference/: cli.md  configuration.md  glossary.md
examples/: README.md
examples/basic/: quickstart.py  token_efficient.py
examples/framework-specific/: autogen_example.py  crewai_example.py  langgraph_example.py  openai_example.py  smolagents_example.py
examples/pytest-plugin/: test_my_agent.py
experiments/: README.md  cost_log.json
experiments/analysis/: __init__.py  analyze_all.py  auto_pull_and_update.sh  e7_analysis.py
experiments/configs/: e1_verdict.yaml  e2_coverage.yaml  e3_mutation.yaml  e4_sprt.yaml  e5_contracts.yaml  e5_metamorphic.yaml  e6_cicd.yaml  e7_codegen.yaml  e7_efficiency.yaml
experiments/infra/: README.md  agentassay-runner.service  deploy.sh  monitor.sh  pull-results.sh  setup-vm.sh  teardown.sh
experiments/runner/: __init__.py  azure_adapter.py  checkpoint.py  cost_tracker.py  daemon.py  daemon_fixes.py  evaluators.py
experiments/scenarios/: code_generation.py  customer_support.py  ecommerce.py  financial_compliance.py
paper/: main.tex  references.bib
paper/appendix/: A-full-proofs.tex
paper/sections/: 01-introduction.tex  02-related-work.tex  03-stochastic-test-semantics.tex  04-coverage-metrics.tex  05-mutation-testing.tex  06-metamorphic-cicd.tex  07-token-efficient.tex  08-implementation.tex  09-experiments.tex  10-discussion.tex  11-conclusion.tex
research/: ACADEMIC-BEYOND-ARXIV-SCAN.md  DEEP-RESEARCH-REPORT.md  GITHUB-PRODUCTS-DEEP-SCAN.md
scripts/: add_headers.py  pre-launch-verify.sh  seed_demo_data.py
src/agentassay/: __init__.py
tests/: conftest.py  test_attribution.py  test_efficiency_regression.py
tests/test_cli/: test_commands.py
tests/test_contracts/: test_contracts.py
tests/test_core/: test_models.py  test_runner.py
tests/test_coverage/: test_coverage.py
tests/test_efficiency/: conftest.py  test_budget.py  test_fingerprint.py  test_multi_fidelity.py  test_trace_store.py  test_warm_start.py
tests/test_experiments/: __init__.py  conftest.py  test_e7_integration.py
tests/test_integrations/: test_autogen_adapter.py  test_bedrock_adapter.py  test_crewai_adapter.py  test_langgraph_adapter.py  test_mcp_adapter.py  test_openai_adapter.py  test_semantic_kernel_adapter.py  test_smolagents_adapter.py  test_vertex_adapter.py  test_vertex_adapter_advanced.py
tests/test_metamorphic/: test_metamorphic.py
tests/test_mutation/: test_mutation.py
tests/test_persistence/: __init__.py  test_events.py  test_queries.py  test_storage.py
tests/test_plugin/: test_pytest_plugin.py
tests/test_reporting/: test_reporters.py
tests/test_statistics/: test_confidence.py  test_effect_size.py  test_hypothesis.py  (+2 more)
(+111 files in other folders)
