[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentassay"
version = "0.1.1"
description = "Formal regression testing for non-deterministic AI agent workflows"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "varun@qualixar.com"},
]
maintainers = [
    {name = "Varun Pratap Bhardwaj", email = "varun@qualixar.com"},
]
keywords = [
    "ai-agents",
    "testing",
    "regression-testing",
    "stochastic-testing",
    "ci-cd",
    "llm",
    "agent-testing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "scipy>=1.12",
    "numpy>=1.26",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
contracts = ["agentassert>=0.1.0"]
langgraph = ["langgraph>=0.2"]
crewai = ["crewai>=0.50"]
autogen = ["autogen-agentchat>=0.4"]
openai = ["openai>=1.50"]
smolagents = ["smolagents>=1.0"]
semantic-kernel = ["semantic-kernel>=1.0"]
bedrock = ["boto3>=1.34"]
mcp = ["mcp>=1.0", "anthropic>=0.40"]
vertex = ["google-cloud-aiplatform>=1.60"]
dashboard = ["streamlit>=1.35", "plotly>=5.20"]
all = [
    "agentassert>=0.1.0",
    "langgraph>=0.2",
    "crewai>=0.50",
    "autogen-agentchat>=0.4",
    "openai>=1.50",
    "smolagents>=1.0",
    "semantic-kernel>=1.0",
    "boto3>=1.34",
    "mcp>=1.0",
    "anthropic>=0.40",
    "google-cloud-aiplatform>=1.60",
]
experiments = [
    "openai>=1.50",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "aiofiles>=24.0",
]

[project.scripts]
agentassay = "agentassay.cli.main:cli"

[project.entry-points."pytest11"]
agentassay = "agentassay.plugin.pytest_plugin"

[project.urls]
Homepage = "https://github.com/qualixar/agentassay"
Documentation = "https://qualixar.com/products/agentassay"
Repository = "https://github.com/qualixar/agentassay"
Paper = "https://arxiv.org/abs/2603.02601"
Issues = "https://github.com/qualixar/agentassay/issues"
Changelog = "https://github.com/qualixar/agentassay/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/agentassay"]

[tool.hatch.build.targets.wheel.shared-data]
"src/agentassay/py.typed" = "agentassay/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["src", "build", "dist", ".git", "*.egg-info"]
addopts = "-v --tb=short"
markers = [
    "agentassay: marks tests as agent assay tests",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
